feat: Replica-aware service tracking with soft delete for services and replicas (#58)
* feat(replica-aware-service-tracking-soft-delete-full): implement replica-aware service tracking with soft delete

Services are now soft-deleted instead of hard-deleted to preserve historical data and maintain referential integrity. Added service_replicas table to track individual container instances, with metrics now stored at the replica level for accurate multi-node benchmarking. Introduced benchmark_services table for future service-benchmark association tracking.

* refactor: simplify to replica-only metrics and address PR review comments

- Remove MetricResourceService entity and metric_resource_services table
- Update OpenAPI schema: MetricResourceServiceDTO now requires replicas field only
- Simplify AgentServiceImpl: remove service-level metrics, add empty replicas validation
- Simplify BenchmarkRunServiceImpl: remove all service-level metric aggregation
- Optimize ServiceServiceImpl: batch soft-delete replicas with saveAll
- Add replicasSoftDeleted to service registration logs
- Remove unused replica counters (replicasCreated, replicasUpdated, replicasReactivated)
- Update all tests to use replica-only metrics

Breaking change: Agents must send replicas array (single container = 1 replica)

* fix: address Copilot review comments - replica-level raw API and soft-delete fixes

- Add migration 024: fix benchmark_services unique constraint for soft-delete compatibility
  - Drop existing UNIQUE(benchmark_id, service_id) constraint
  - Create partial unique index WHERE deleted_at IS NULL (PostgreSQL only)
- Update OpenAPI schema: expose replica-level time series in raw API
  - Add RawReplicaTimeSeriesDTO with replicaId, containerId, dataPoints
  - Change RawServiceTimeSeriesDTO to use replicas array instead of dataPoints
- Update BenchmarkRunServiceImpl: group metrics by replica ID for separate time series
  - No flattening of metrics across replicas
  - Each replica has its o